<resources>
    <string name="app_name">IHS STEM</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Francis Olakunle</string>
    <string name="nav_header_subtitle">francis.olakunle@ihs.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_test">MainTestActivity</string>

    <string name="str_home">Home</string>
    <string name="str_dashboard">Dashboard</string>
    <string name="str_time_table">Time Table</string>
    <string name="str_notes">Notes</string>
    <string name="str_events">Events</string>
    <string name="str_next_session">NEXT CLASS</string>
    <string name="str_topic">Anatomy 101</string>
    <string name="str_class_name">Class 1A</string>
    <string name="str_welcome_message">Welcome back %1$s, you have %2$s lessons today.</string>
    <string name="str_next_class_count_title">Next class in:</string>

    <string name="str_next_class_count_down_finished">Class in session</string>
    <string name="str_time_example">11:00</string>
    <string name="str_timer_example">00:00:00</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_day_text_example">Mon</string>
    <string name="str_day_num_example">12</string>
    <string name="str_month_example">Oct</string>
    <string name="str_day_of_week_test">Wednesday</string>
    <string name="str_full_date_example">30 August 2018</string>
    <string name="str_to">  -  </string>
    <string name="str_subject_example">BIOLOGY</string>
    <string name="str_ihs_logo_desc">The IHS logo on the welcome page</string>
    <string name="str_slogan">Towers of strength</string>
    <string name="str_intro_content">Empowering Digital Literacy</string>
    <string name="str_get_started">Get Started</string>
    <string name="login_back_button_desc">Back button to go to previous page</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_login">Log in</string>

    <string name="str_username_password_instructions">Your username and password must be 6 or more character long.</string>
    <string name="field_required_error">This field is required</string>
    <string name="nav_user_fullname">Francis Olakunle</string>
    <string name="nav_header_username">francola</string>
    <string name="str_dashboard_icon_desc">Icon to illustrate some identity on the dashboard</string>
    <string name="hint_username">USERNAME</string>
    <string name="str_filter_by">Filter By</string>
    <string name="str_sessions">Academic Session</string>
    <string name="str_session_year">2018/2019</string>
    <string name="str_filter_by_text">Filter By:</string>
    <string name="str_term_title_example">1st Term</string>
    <string name="str_forgot_password">Forgot Password?</string>
    <string name="str_retrieve_password">Retrieve your password</string>
    <string name="str_enter_email_username">Enter your email or username</string>
    <string name="str_send">Send</string>
    <string name="str_email_username_hint">Email/Username</string>
    <string name="str_splash_logo_desc">Logo displayed on the splash screen</string>
    <string name="str_edit_profile">Edit Profile</string>
    <string name="str_phone">08022331122</string>
    <string name="str_email_example">francola@gmail.com</string>
    <string name="str_close_button_desc">Button with close icon to close activities or fragments</string>
    <string name="str_save_button_desc">Button with tick icon to save content</string>
    <string name="str_change_photo">Change Photo</string>
    <string name="str_fullname_title">Name</string>
    <string name="str_profile_icon_desc">Icon to display user display pciture</string>
    <string name="str_email">Email Address</string>
    <string name="str_mobile">Phone Number</string>
    <string name="str_date_of_birth_title">Date of Birth</string>
    <string name="str_private_information">Personal Information</string>
    <string name="str_admin_contact_title">Our admin are available and open on weekdays (Mondays - Fridays) from 9am to 5pm.</string>
    <string name="str_email_admin">Email: support@ihsteachers.com</string>
    <string name="main_appbar_image">Background image for the classes description page</string>
    <string name="str_ebook_example">Mechanisms of Mitotic Chromosome Segregation</string>
    <string name="str_class_material_icon_desc">The the icon of classes material type</string>
    <string name="str_class_material_content_icon_desc">The image to represent the content of the particular class material</string>
    <string name="str_dynamic_value">testing text</string>
    <string name="str_images_example"><![CDATA[Mitosis & Meosis]]></string>
    <string name="str_class_session">Class in Session</string>
    <string name="str_class_info">%1$s - %2$s</string>

    <string name="str_class_details_complete">Completed</string>

    <string name="str_study_materials_content">The replicated chromosomes are attached to a \'mitotic apparatus\' that aligns them and then separates the sister chromatids to produce an even partitioning of the genetic material. This separation of the genetic material in a mitotic nuclear division (or karyokinesis) is followed by a separation of the cell cytoplasm in a cellular division (or cytokinesis) to produce two daughter cells.</string>

    <string name="str_view_more">View more</string>
    <string name="str_view_less">View less</string>
    <string name="hint_subject">Subject</string>
    <string name="hint_message">Message</string>
    <string name="img_background_launch_login_desc">Imageview for background images of lauch and login page</string>

    <string name="str_day_week_val">%1$s %2$s</string>
    <string name="str_titmetable">Time Table</string>
    <string name="str_firstname">Firstname</string>
    <string name="str_lastname">Lastname</string>
    <string name="str_gender">Gender</string>

    <string name="str_term_duration">%1$s - %2$s</string>
    <string name="str_message">Message</string>
    <string name="contact_admin">Contact Admin</string>
    <string name="stem_resources">STEM Resources</string>
    <string name="share_app">Share App</string>
    <string name="general">General</string>
    <string name="change_password">Change Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="logout">Logout</string>
    <string name="str_covered">Covered</string>
    <string name="str_download">Download</string>
    <string name="str_my_subjects">My Assigned Subjects</string>
    <string name="str_my_subjects_desc">View subjects assigned to teacher</string>
    <string name="str_my_classes">My Classes</string>
    <string name="srt_covered_classes">My Covered Classes</string>
    <string name="str_covered_classes_desc">Classes teacher has attended and clicked covered</string>
    <string name="str_classes">Classes covered by teacher</string>
    <string name="str_current_password">Current Password</string>
    <string name="str_new_password">New Password</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_update_password">Update Password</string>
    <string name="str_home_title_my_classes">My\nClasses</string>
    <string name="str_my_assigned_classes_title">My\nAssigned\nSubjects</string>
    <string name="str_my_covered_classes">Subjects\nCovered</string>
    <string name="str_my_classes_bottom_info">Click to see classes</string>
    <string name="str_assigned_bottom_info">Click to see subjects assigned</string>
    <string name="str_covered_bottom_info">Click to view list of covered classes</string>
    <string name="write_file">This app needs access to your file storage so that it can write files.</string>
    <string name="str_all_assigned_classes">All Assigned Classes</string>

    <string name="str_my_class_result">%1$s %2$s</string>
    <string name="str_download_file">Downloading File</string>
    <string name="str_spinner_img_desc">Spinner dropdown image</string>
    <string name="str_classes_title">Classes</string>

    <string-array name="subject_options">
        <item>Select Subject</item>
        <item>Coding</item>
        <item>Digital Literacy</item>
        <item>Engineering</item>
        <item>Legal</item>
        <item>Robotics</item>
    </string-array>

    <string-array name="term_options">
        <item>Select Term</item>
        <item>1st Term</item>
        <item>2nd Term</item>
        <item>3rd Term</item>
    </string-array>

</resources>
