<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contact_admin"
            android:icon="@drawable/ic_support"
            android:title="@string/contact_admin"
            app:itemIconTint="@drawable/menu_item_selector"
            app:itemTextColor="@drawable/menu_item_selector"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/nav_stem_resources"
            android:icon="@drawable/ic_resources"
            app:itemIconTint="@drawable/menu_item_selector"
            app:itemTextColor="@drawable/menu_item_selector"
            android:title="@string/stem_resources" />
        <item
            android:id="@+id/nav_share_app"
            android:icon="@drawable/ic_share"
            app:itemIconTint="@drawable/menu_item_selector"
            app:itemTextColor="@drawable/menu_item_selector"
            android:title="@string/share_app" />

        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_password"
            app:itemIconTint="@drawable/menu_item_selector"
            app:itemTextColor="@drawable/menu_item_selector"
            android:title="@string/change_password" />

        <item android:title="@string/general">
            <menu>
                <item
                    android:id="@+id/nav_privacy_policy"
                    android:icon="@drawable/ic_shield"
                    app:itemIconTint="@drawable/menu_item_selector"
                    app:itemTextColor="@drawable/menu_item_selector"
                    android:title="@string/privacy_policy" />
                <item
                    android:id="@+id/nav_terms_use"
                    android:icon="@drawable/ic_file"
                    app:itemIconTint="@drawable/menu_item_selector"
                    app:itemTextColor="@drawable/menu_item_selector"
                    android:title="@string/terms_of_use" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    app:itemIconTint="@drawable/menu_item_selector"
                    app:itemTextColor="@drawable/menu_item_selector"
                    android:title="@string/logout" />

            </menu>

        </item>

    </group>

</menu>
