<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgTopLogo"
            android:layout_width="@dimen/home_top_logo_width"
            android:layout_height="@dimen/home_top_logo_height"
            app:srcCompat="@drawable/ihs_top_logo" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/homePager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clipToPadding="false"
        android:paddingLeft="25dp"
        android:paddingRight="25dp" />

    <LinearLayout
        android:id="@+id/btnMySubjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/left_curved_button"
        android:orientation="vertical"
        android:padding="15dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_my_subjects"
            android:textColor="@android:color/white"
            android:textSize="@dimen/assigned_topic_text_size" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_my_subjects_desc"
            android:textColor="@android:color/white"
            android:textSize="@dimen/home_row_title_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnMyClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/right_curved_button"
        android:orientation="vertical"
        android:padding="15dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtClassesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_my_classes"
            android:textColor="@android:color/white"
            android:textSize="@dimen/assigned_topic_text_size" />

        <TextView
            android:id="@+id/txtClassesDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_classes"
            android:textColor="@android:color/white"
            android:textSize="@dimen/home_row_title_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnMyCoveredClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/left_curved_accent_button"
        android:orientation="vertical"
        android:padding="15dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtCoveredTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/srt_covered_classes"
            android:textColor="@android:color/white"
            android:textSize="@dimen/assigned_topic_text_size" />

        <TextView
            android:id="@+id/txtCoveredDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_covered_classes_desc"
            android:textColor="@android:color/white"
            android:textSize="@dimen/home_row_title_text_size" />
    </LinearLayout>

</LinearLayout>





