<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/txt_home_welcome_top_margin"
    android:paddingStart="@dimen/txt_home_welcome_top_margin"
    android:paddingTop="@dimen/txt_home_welcome_top_margin"
    tools:context=".login.activity.ForgotPasswordActivity">

    <ProgressBar
        android:id="@+id/progressBarForgotPass"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtForgotPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="@string/str_retrieve_password"
        android:textSize="@dimen/assigned_topic_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtForgotPasswordSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_row_content_margin_right"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/str_enter_email_username"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/btn_get_started_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPasswordTitle" />

    <EditText
        android:id="@+id/txtForgottenPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_form_top_margin"
        android:ems="10"
        android:hint="@string/str_email_username_hint"
        android:inputType="textPersonName"
        android:textColor="@color/colorDarkGray"
        android:textSize="@dimen/btn_get_started_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPasswordSubTitle" />

    <Button
        android:id="@+id/btnForgottenPasswordSend"
        android:layout_width="@dimen/spinner_filter_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_login_margin_top"
        android:background="@drawable/btn_themed_curved_radius"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/str_send"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/forgot_pass_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgottenPasswordInput" />

</android.support.constraint.ConstraintLayout>