<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/home_row_height"
    android:layout_marginBottom="@dimen/home_row_margin_bottom"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/homeRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="@dimen/cardCurvedRadius"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/colorBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blue_cerulean_gradient_curve"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/home_row_padding_end"
                android:paddingStart="@dimen/text_margin">

                <TextView
                    android:id="@+id/txtHiddenSubject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light_font"
                    android:text="@string/str_next_session"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/home_row_title_text_size"
                    android:visibility="gone"
                    app:layout_constraintRight_toLeftOf="@+id/imgHomeRowIcon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/proxima_nova_semibold"
                    android:text="@string/str_topic"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/home_welcome_message_text_size"
                    app:layout_constraintRight_toLeftOf="@+id/imgHomeRowIcon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

                <TextView
                    android:id="@+id/txtSubContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/str_class_name"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/home_row_title_text_size"
                    app:layout_constraintRight_toLeftOf="@+id/imgHomeRowIcon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtContent" />

                <ImageView
                    android:id="@+id/imgHomeRowIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/str_dashboard_icon_desc"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_appointment" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
